--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "bootstrap": "^4.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "twisted": "^1.25.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
